# infrastructure-automation

./: .gitignore  README.md
Python/: README.md  main.py  requirements.txt  setup.py
Python/scripts/: run_integration_tests.bat  run_integration_tests.sh
Python/src/inventory/: aws_inventory.py
Python/src/playbooks/: webserver.yml
Python/src/playbooks/templates/: default.conf.j2  index.html.j2  nginx.conf.j2
Python/src/utils/: exceptions.py  logging_config.py  ssh_manager.py
Python/tests/: test_aws_inventory.py  test_integration.py  test_ssh_manager.py
cpp/: CMakeLists.txt  README.md
cpp/src/: CMakeLists.txt  main.cpp  trading_solution.cpp
cpp/src/data_structures/: containers.cpp  vector_examples.cpp
cpp/tests/: CMakeLists.txt  main_test.cpp
cpp/tests/data_structures/: containers_test.cpp
cpp/tests/memory/: smart_pointers_test.cpp
